src/objects/Favorite__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Favorites</relationshipLabel>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Favorite_Name__c</fullName>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Favorite Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Favorites</relationshipLabel>
        <relationshipName>Favorites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Favorite</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Favorite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>